overridden toString(), added a new method to check for contains, and also added a couple of checks for emptiness